bon/tests/integration/ui/compile_fail/set_macro.stderr
error: duplicate map key
  --> tests/integration/ui/compile_fail/set_macro.rs:14:9
   |
14 |         "Hello", "Mars",
   |         ^^^^^^^
